--- a/components/navbar/NavbarToggler.module.css
+++ b/components/navbar/NavbarToggler.module.css
@@ -3,6 +3,7 @@
     background-color: var(--bg-8);
     transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
     width: 40px;
+    height: 40px;
 }
 
 .toggle:hover {
